added pages & navigation

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
+  "base_url": "https://dreamy-pike-3280c6.netlify.app",
+  "site_title": "Alternative Imaginaries",
   "site_description": "Next.js blog template for Netlify",
   "site_keywords": [
     {
