--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "next": "10.1.2",
     "next-mdx-remote": "^2.1.3",
     "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-instagram-embed": "^2.0.0",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "^3.0.3",
@@ -29,11 +29,11 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
+    "@types/node": "^14.17.33",
+    "@types/react": "^17.0.35",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3",
+    "typescript": "^4.4.4",
     "yaml-loader": "^0.6.0"
   }
 }
